--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,12 +1,13 @@
 {% set name = "preliz" %}
 {% set version = "0.12.0" %}
+{% set python_min = "3.11" %}
 
 package:
   name: {{ name|lower }}
   version: {{ version }}
 
 source:
-  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name.replace('-', '_') }}-{{ version }}.tar.gz
+  url: https://pypi.org/packages/source/{{ name[0] }}/{{ name }}/{{ name.replace('-', '_') }}-{{ version }}.tar.gz
   sha256: 3989d904559271a459388f49f7eca97df0568f17c3c0b85ca321e2c285b022bf
 
 build:
@@ -17,14 +18,14 @@ build:
 requirements:
   host:
     - pip >=21.3
-    - python >=3.10
+    - python {{ python_min }}
     - flit
     - setuptools
   run:
     - matplotlib-base >=3.7
     - numba >=0.59
     - numpy >=1.24
-    - python >=3.11
+    - python >={{ python_min }}
     - scipy >=1.10, <1.13
 
 test:
@@ -34,6 +35,7 @@ test:
     - pip check
   requires:
     - pip
+    - python {{ python_min }}
 
 about:
   home: https://github.com/arviz-devs/preliz
