--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -22,11 +22,12 @@ requirements:
     - flit
     - setuptools
   run:
-    - matplotlib-base >=3.7
+    - arviz_stats >=0.6.0  
+    - matplotlib-base >=3.8
     - numba >=0.59
-    - numpy >=1.24
+    - numpy >=2.0
     - python >={{ python_min }}
-    - scipy >=1.10, <1.16
+    - scipy >=1.12
 
 test:
   imports:
