--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -22,13 +22,14 @@ requirements:
     - flit
     - setuptools
   run:
-    - arviz_stats >=0.6.0  
     - matplotlib-base >=3.8
     - numba >=0.59
     - numpy >=2.0
     - python >={{ python_min }}
     - scipy >=1.12
-
+    - pip
+  pip:
+    - arviz_stats >=0.6.0
 test:
   imports:
     - preliz
